--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.password=Lisbon$2021
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ## JPA
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
 #Server configuration
